[package]
name = "example-rust-vm"
version = "0.1.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>", "Jake Lang <jak3lang@gmail.com>"]
edition = "2018"

[lib]
name = "examplerustvm"
crate-type = ["staticlib", "cdylib"]

[dependencies]
evmc-sys = { version = "6.3.1-rc3", package = "ssvm-evmc-sys" }
evmc-vm = { version = "6.3.1-rc3", package = "ssvm-evmc-vm" }
evmc-declare = { path = "../../bindings/rust/evmc-declare", package = "ssvm-evmc-declare" }
