# EVMC: Ethereum Client-VM Connector API.
# Copyright 2019 The Second State Company.
# Licensed under the GNU Affero General Public License, Version 3.0.

[package]
name = "evmc-client"
version = "6.3.1"
authors = ["Zigang Lin <vincent@secondstate.io>"]
license = "AGPL-3.0"
repository = "https://github.com/second-state/evmc"
description = "Bindings to EVMC (Client/Host specific)"
edition = "2018"

[dependencies]
evmc-sys = { path = "../evmc-sys" }
libloading = "0.5"
lazy_static = "1.4.0"
