# EVMC: Ethereum Client-VM Connector API.
# Copyright 2019 The EVMC Authors.
# Licensed under the Apache License, Version 2.0.

[package]
name = "ssvm-evmc-declare-tests"
version = "6.3.1-rc3"
authors = ["Jake Lang <jak3lang@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/ethereum/evmc"
description = "Bindings to EVMC (VM declare macro) -- Test crate"
edition = "2018"
publish = false

[dependencies]
evmc-declare = { path = "../evmc-declare", package = "ssvm-evmc-declare" }
evmc-sys = { version = "6.3.1-rc3", package = "ssvm-evmc-sys" }
evmc-vm = { version = "6.3.1-rc3", package = "ssvm-evmc-vm" }
