# EVMC: Ethereum Client-VM Connector API.
# Copyright 2019 The EVMC Authors.
# Licensed under the Apache License, Version 2.0.

[package]
name = "ssvm-evmc-declare-tests"
version = "7.4.0-rc2"
authors = ["Jake Lang <jak3lang@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/secondstate/evmc"
description = "Bindings to EVMC (VM declare macro) -- Test crate"
edition = "2018"
publish = false

[dependencies]
evmc-declare = { path = "../evmc-declare", version = "7.4.0-rc2", package = "ssvm-evmc-declare" }
evmc-sys = { path = "../evmc-sys", version = "7.4.0-rc2", package = "ssvm-evmc-sys" }
evmc-vm = { path = "../evmc-vm", version = "7.4.0-rc2", package = "ssvm-evmc-vm" }
